# kaleido

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  justfile
examples/: anime4k-1k.sh  artcnn.sh  chromium-1k.sh  chromium-4k.sh  chromium.sh  fsrcnn.sh
include/kaleido/: config.hpp  function.hpp  kaleido.hpp  prefix.hpp  preset.hpp  result.hpp
src/: config.cpp  function.cpp  kaleido.cpp  main.cpp  prefix.cpp  preset.cpp  process.cpp
